# VIGS-Fusion

./: CMakeLists.txt  README.md  package.xml
include/cuda_utils/: CMakeLists.txt  package.xml
include/cuda_utils/include/cuda_utils/: CachedAllocator.h  CudaErrorCheck.h  MatrixTypes.h  cuda_utils_dev.cuh  cudasharedptr.h  matrix_math.cuh  reduce_dev.cuh  vector_math.cuh
include/cuda_utils/src/: CachedAllocator.cpp
include/gaussian_splatting_slam/: BetaBinomialGenerator.hpp  GSPoseCost.hpp  GaussianSplattingKeyframe.hpp  GaussianSplattingSlam.hpp  GaussianSplattingSlamKernels.hpp  GaussianSplattingSlamNode.hpp  GaussianSplattingSlamTypes.hpp  GaussianSplattingViewer.hpp  IMU_data.hpp  ImuCostFunction.hpp  LocalParameterization.hpp  MarginalizationFactor.hpp  PoseLocalParameterization.hpp  Preintegration.hpp  Utility.hpp  cuda_error_check.h  texture.hpp  texture_impl.hpp
launch/: gaussian_splatting_slam_darknav_compressed_launch.py  vigs_fusion_launch.py
src/: BetaBinomialGenerator.cpp  GSPoseCost.cu  GaussianSplattingKeyframe.cu  GaussianSplattingSlam.cu  GaussianSplattingSlamKernels.cu  GaussianSplattingSlamNode.cpp  GaussianSplattingSlamTypes.cu  GaussianSplattingViewer.cpp  ImuCostFunction.cpp  MarginalizationFactor.cpp  PoseLocalParameterization.cpp  Preintegration.cpp  Utility.cpp  gaussian_splatting_slam.cpp  gaussian_splatting_slam_node.cpp
